# emmett55

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  tests.yml
emmett55/: __init__.py  app.py  cache.py  cli.py  ctx.py  datastructures.py  extensions.py  html.py  http.py  locals.py  parsers.py  pipeline.py  serializers.py  sessions.py  templating.py  testing.py  utils.py
emmett55/routing/: router.py  urls.py
emmett55/tools/: __init__.py  decorators.py  pipes.py
examples/jinja/: app.py
examples/jinja/templates/: index.html
examples/renoir/: app.py
examples/renoir/templates/: index.html
examples/sqlalchemy/: app.py
tests/: test_req_flow.py  test_sessions.py
tests/tools/: test_requires.py  test_service.py
